// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`from > from(-3.141592653589793) > from(-3.141592653589793) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-3.141592653589793
╠══════════════════════════════════════════════════╣ THEN RETURNS
-3.141592653589793
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(0) > from(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS
0
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(1.5708) > from(1.5708) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1.5708
╠══════════════════════════════════════════════════╣ THEN RETURNS
1.5708
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(1.5707963267948966) > from(1.5707963267948966) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1.5707963267948966
╠══════════════════════════════════════════════════╣ THEN RETURNS
1.5707963267948966
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(3.141592653589793) > from(3.141592653589793) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3.141592653589793
╠══════════════════════════════════════════════════╣ THEN RETURNS
3.141592653589793
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(6.283185307179586) > from(6.283185307179586) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
6.283185307179586
╠══════════════════════════════════════════════════╣ THEN RETURNS
6.283185307179586
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(null) > from(null) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be finite, got: Infinity
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(null) > from(null) 2`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be finite, got: -Infinity
╚══════════════════════════════════════════════════╝"
`;

exports[`from > from(null) > from(null) 3`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN THROWS
Error: Value must be finite, got: NaN
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is("3.14") > is("3.14") 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
"3.14"
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is() > is() 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS

╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(-3.141592653589793) > is(-3.141592653589793) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-3.141592653589793
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(0) > is(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(1.5708) > is(1.5708) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1.5708
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(1.5707963267948966) > is(1.5707963267948966) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1.5707963267948966
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(3.141592653589793) > is(3.141592653589793) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3.141592653589793
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(6.283185307179586) > is(6.283185307179586) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
6.283185307179586
╠══════════════════════════════════════════════════╣ THEN RETURNS
true
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) > is(null) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) > is(null) 2`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) > is(null) 3`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`is > is(null) > is(null) 4`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
false
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(-3.141592653589793) > tryFrom(-3.141592653589793) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
-3.141592653589793
╠══════════════════════════════════════════════════╣ THEN RETURNS
-3.141592653589793
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(0) > tryFrom(0) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
0
╠══════════════════════════════════════════════════╣ THEN RETURNS
0
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(1.5708) > tryFrom(1.5708) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1.5708
╠══════════════════════════════════════════════════╣ THEN RETURNS
1.5708
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(1.5707963267948966) > tryFrom(1.5707963267948966) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
1.5707963267948966
╠══════════════════════════════════════════════════╣ THEN RETURNS
1.5707963267948966
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(3.141592653589793) > tryFrom(3.141592653589793) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
3.141592653589793
╠══════════════════════════════════════════════════╣ THEN RETURNS
3.141592653589793
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(6.283185307179586) > tryFrom(6.283185307179586) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
6.283185307179586
╠══════════════════════════════════════════════════╣ THEN RETURNS
6.283185307179586
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(null) > tryFrom(null) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(null) > tryFrom(null) 2`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;

exports[`tryFrom > tryFrom(null) > tryFrom(null) 3`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
null
╠══════════════════════════════════════════════════╣ THEN RETURNS
null
╚══════════════════════════════════════════════════╝"
`;
